添加了左上角的图片

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>D1n910的家🏠</title>
   </head>
   <body>
+    <h1 style="display:none;">D1n910 博客</h1>
     <noscript>
       <strong>We're sorry but try-blog doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
