修改了layout；开始制作markdown的文章

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>D1n910的家🏠</title>
+    <script>
+      console.log('%cD1N910的家🏠', 'text-shadow:1px 1px 1px rgba(0, 0, 0,.2);font-size:40px')
+      console.log('D1N910的家🏠\n版本2019年0.1版')
+    </script>
   </head>
   <body>
     <h1 style="display:none;">D1n910 博客</h1>
