进行了排序

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="../static/img/favicon.ico"> -->
+    <!-- <link rel="icon" href="https://www.d1n910.cn/static/img/favicon.ico"> -->
     <title>D1n910的家🏠</title>
     <script>
       console.log('%cD1N910的家🏠', 'text-shadow:1px 1px 1px rgba(0, 0, 0,.2);font-size:40px')
