完成了自制

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <link rel="icon" href="../static/img/favicon.ico"> -->
     <!-- <link rel="icon" href="https://www.d1n910.cn/static/img/favicon.ico"> -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1007190_e7sd349fo4c.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>D1n910的家🏠</title>
     <script>
       console.log('%cD1N910的家🏠', 'text-shadow:1px 1px 1px rgba(0, 0, 0,.2);font-size:40px')
