--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="shortcut icon" src="https://www.d1n910.cn/static/img/favicon.ico" type="image/x-icon">
     <!-- <link rel="icon" href="../static/img/favicon.ico"> -->
     <!-- <link rel="icon" href="https://www.d1n910.cn/static/img/favicon.ico"> -->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1007190_e7sd349fo4c.css">
