--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,17 @@
         display: flex;
         align-items: center;
       }
-      img {
+      .loading img {
         width: 100px;
+      }
+      .content img {
+        height: 30vh;
+        transition: all 0.3s;
+        max-width: 100%;
+      }
+      .content img:hover{
+        height: 60vh;
+        object-fit: cover;
       }
       .cake{animation:move 3s 0s infinite;-webkit-animation:move 3s 0s infinite;transform-origin:bottom;-webkit-transform-origin:bottom;}
 
