优化了markdown内容；新增了衔泥图片预览

--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,8 @@
         width: 100px;
       }
       .content img {
-        height: 30vh;
-        transition: all 0.3s;
         max-width: 100%;
-      }
-      .content img:hover{
-        height: 60vh;
-        object-fit: cover;
+        max-height: 40vh;
       }
       .cake{animation:move 3s 0s infinite;-webkit-animation:move 3s 0s infinite;transform-origin:bottom;-webkit-transform-origin:bottom;}
 
