--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="utf-8">
+    <meta name="referrer" content="never">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" src="https://www.d1n910.cn/static/img/favicon.ico" type="image/x-icon">
