添加百度代码

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
       console.log('%cD1N910的家🏠', 'text-shadow:1px 1px 1px rgba(0, 0, 0,.2);font-size:40px')
       console.log('D1N910的家🏠\n版本2019年0.11版')
     </script>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?bb0c887a3a1e002a96977a93abbf5205";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
     <style>
       .loading {
         text-align: center;
