--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="referrer" content="never">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" src="https://www.d1n910.cn/static/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" src="https://www.d1n910.com/static/img/favicon.ico" type="image/x-icon">
     <!-- <link rel="icon" href="../static/img/favicon.ico"> -->
-    <!-- <link rel="icon" href="https://www.d1n910.cn/static/img/favicon.ico"> -->
+    <!-- <link rel="icon" href="https://www.d1n910.com/static/img/favicon.ico"> -->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1007190_4mgq9v1psxj.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>D1n910的家🏠</title>
