加了不少东西

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
         max-width: 100%;
         max-height: 40vh;
       }
+      .content .emoji {
+        width: 50px;
+      }
       .cake{animation:move 3s 0s infinite;-webkit-animation:move 3s 0s infinite;transform-origin:bottom;-webkit-transform-origin:bottom;}
 
       @keyframes move
