添加大小18表情

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
       .content .emoji {
         width: 50px;
       }
+      .content .emoji_18 {
+        width: 18px;
+      }
       .cake{animation:move 3s 0s infinite;-webkit-animation:move 3s 0s infinite;transform-origin:bottom;-webkit-transform-origin:bottom;}
 
       @keyframes move
