添加了狗头表情

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,9 @@
       .content .emoji {
         width: 50px;
       }
-      .content .emoji_18 {
+      .content .small_img_face {
         width: 18px;
+        vertical-align: -4px;
       }
       .cake{animation:move 3s 0s infinite;-webkit-animation:move 3s 0s infinite;transform-origin:bottom;-webkit-transform-origin:bottom;}
 
