表情包展示

--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
         max-width: 100%;
         max-height: 40vh;
       }
-      .content .emoji {
+      .emoji {
         width: 50px;
       }
-      .content .small_img_face {
+      .small_img_face {
         width: 18px;
         vertical-align: -4px;
       }
